native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_create(uint32_t flags, JYPPX_CudaGraph** out_graph);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_clone(JYPPX_CudaGraph* graph, JYPPX_CudaGraph** out_clone);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_handle_create_safe(JYPPX_CudaGraph* graph, uint32_t default_launch_value, uint32_t flags, JYPPX_CudaGraphConditionalHandle** out_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_handle_create_v2_safe(JYPPX_CudaGraph* graph, JYPPX_CudaExecutionContext* context, uint32_t default_launch_value, uint32_t flags, JYPPX_CudaGraphConditionalHandle** out_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_handle_destroy_safe(JYPPX_CudaGraphConditionalHandle* handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_node_destroy_safe(JYPPX_CudaGraphConditionalNode* node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_node_get_node_token_safe(JYPPX_CudaGraphConditionalNode* node, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_node_get_body_count_safe(JYPPX_CudaGraphConditionalNode* node, uint32_t* out_body_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_body_get_node_count_safe(JYPPX_CudaGraphConditionalNode* node, uint32_t body_index, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_body_get_root_node_count_safe(JYPPX_CudaGraphConditionalNode* node, uint32_t body_index, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_body_get_edge_count_safe(JYPPX_CudaGraphConditionalNode* node, uint32_t body_index, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_conditional_body_add_empty_node_safe(JYPPX_CudaGraphConditionalNode* node, uint32_t body_index, uintptr_t dependency_node, uintptr_t* out_body_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_child_graph_node_has_embedded_graph_safe(uintptr_t node, JYPPX_Boolean* out_has_graph);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_child_graph_node_get_node_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_child_graph_node_get_root_node_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_child_graph_node_get_edge_count_safe(uintptr_t node, size_t* out_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_child_graph_node_set_params_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaGraph* child_graph);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_memset_node_safe(JYPPX_CudaGraph* graph, JYPPX_CudaMemory* destination, uint32_t value, size_t count, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_memset_node_after_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaMemory* destination, uint32_t value, size_t count, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_destroy_node_owner_scoped_safe(JYPPX_CudaGraph* graph, uintptr_t node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_get_flags(JYPPX_CudaGraphExec* graph_exec, uint64_t* out_flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_launch(JYPPX_CudaGraphExec* graph_exec, JYPPX_CudaStream* stream);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_destroy(JYPPX_CudaGraphExec* graph_exec);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_destroy(JYPPX_CudaGraph* graph);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_debug_dot_print_safe(JYPPX_CudaGraph* graph, const char* path, uint32_t flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_get_id_safe(JYPPX_CudaGraphExec* graph_exec, uint32_t* out_id);
/* END CUDA FORTY-FOURTH BATCH GRAPH NODE PARAMETER DESCRIPTORS */

/* BEGIN CUDA FORTY-SIXTH BATCH GRAPH EVENT NODES */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_event_record_node_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaEvent* event_handle, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_event_wait_node_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaEvent* event_handle, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_event_record_node_set_event_safe(uintptr_t node, JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_event_record_node_has_event_safe(uintptr_t node, JYPPX_Boolean* out_has_event);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_event_wait_node_set_event_safe(uintptr_t node, JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_event_wait_node_has_event_safe(uintptr_t node, JYPPX_Boolean* out_has_event);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_event_record_node_set_event_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaEvent* event_handle);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_event_wait_node_set_event_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaEvent* event_handle);
/* END CUDA FORTY-SIXTH BATCH GRAPH EVENT NODES */

/* BEGIN CUDA FORTY-SEVENTH BATCH GRAPH MEMCPY 1D NODES */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_memcpy_node_1d_device_to_device_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaMemory* destination, JYPPX_CudaMemory* source, size_t count, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_memcpy_node_1d_host_to_device_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaMemory* destination, JYPPX_CudaPinnedMemory* source, size_t count, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_memcpy_node_1d_device_to_host_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaPinnedMemory* destination, JYPPX_CudaMemory* source, size_t count, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_memcpy_node_set_params_1d_device_to_device_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaMemory* destination, JYPPX_CudaMemory* source, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_memcpy_node_set_params_1d_host_to_device_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaMemory* destination, JYPPX_CudaPinnedMemory* source, size_t count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_exec_memcpy_node_set_params_1d_device_to_host_safe(JYPPX_CudaGraphExec* graph_exec, uintptr_t node, JYPPX_CudaPinnedMemory* destination, JYPPX_CudaMemory* source, size_t count);