src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_event_record_node_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaEventHandle event_handle, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_event_wait_node_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaEventHandle event_handle, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_memcpy_node_1d_device_to_device_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_memcpy_node_1d_device_to_host_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaPinnedMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_memcpy_node_1d_host_to_device_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaMemoryHandle destination, SafeCudaPinnedMemoryHandle source, UIntPtr count, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_memset_node_after_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaMemoryHandle destination, uint value, UIntPtr count, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_memset_node_safe(SafeCudaGraphHandle graph, SafeCudaMemoryHandle destination, uint value, UIntPtr count, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_child_graph_node_get_edge_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_child_graph_node_get_node_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_child_graph_node_get_root_node_count_safe(UIntPtr node, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_child_graph_node_has_embedded_graph_safe(UIntPtr node, out int out_has_graph);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_clone(SafeCudaGraphHandle graph, out SafeCudaGraphHandle out_clone);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_body_add_empty_node_safe(SafeCudaGraphConditionalNodeHandle node, uint body_index, UIntPtr dependency_node, out UIntPtr out_body_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_body_get_edge_count_safe(SafeCudaGraphConditionalNodeHandle node, uint body_index, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_body_get_node_count_safe(SafeCudaGraphConditionalNodeHandle node, uint body_index, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_body_get_root_node_count_safe(SafeCudaGraphConditionalNodeHandle node, uint body_index, out UIntPtr out_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_handle_create_safe(SafeCudaGraphHandle graph, uint default_launch_value, uint flags, out SafeCudaGraphConditionalHandleHandle out_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_handle_create_v2_safe(SafeCudaGraphHandle graph, SafeCudaExecutionContextHandle context, uint default_launch_value, uint flags, out SafeCudaGraphConditionalHandleHandle out_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_handle_destroy_safe(IntPtr handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_node_destroy_safe(IntPtr node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_node_get_body_count_safe(SafeCudaGraphConditionalNodeHandle node, out uint out_body_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_conditional_node_get_node_token_safe(SafeCudaGraphConditionalNodeHandle node, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_create(uint flags, out SafeCudaGraphHandle out_graph);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_debug_dot_print_safe(SafeCudaGraphHandle graph, IntPtr path, uint flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_destroy(IntPtr graph);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_destroy_node_owner_scoped_safe(SafeCudaGraphHandle graph, UIntPtr node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_event_record_node_has_event_safe(UIntPtr node, out int out_has_event);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_event_record_node_set_event_safe(UIntPtr node, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_event_wait_node_has_event_safe(UIntPtr node, out int out_has_event);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_event_wait_node_set_event_safe(UIntPtr node, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_child_graph_node_set_params_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaGraphHandle child_graph);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_destroy(IntPtr graph_exec);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_event_record_node_set_event_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_event_wait_node_set_event_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaEventHandle event_handle);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_get_flags(SafeCudaGraphExecHandle graph_exec, out ulong out_flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_get_id_safe(SafeCudaGraphExecHandle graph_exec, out uint out_id);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_launch(SafeCudaGraphExecHandle graph_exec, SafeCudaStreamHandle stream);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_memcpy_node_set_params_1d_device_to_device_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_memcpy_node_set_params_1d_device_to_host_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaPinnedMemoryHandle destination, SafeCudaMemoryHandle source, UIntPtr count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_exec_memcpy_node_set_params_1d_host_to_device_safe(SafeCudaGraphExecHandle graph_exec, UIntPtr node, SafeCudaMemoryHandle destination, SafeCudaPinnedMemoryHandle source, UIntPtr count);
